[bumpversion]
current_version = 1.7.0
commit = True
tag = False
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
exclude = configobj
select = E,F,W
ignore = E123,E126,E203,E226,E241,E704,W503,W504

[pydocstyle]
match = ^((?!\.sync-zenodo-metadata|setup|benchmark|mpipool|connection|crypt|host|filesystems|indexing).)*\.py$
match-dir = ^((?!\.|tests|configobj|db).)*$
ignore-decorators = "deprecated"
add-ignore = D105, D107, D203, D204, D213

[mypy]
ignore_missing_imports = True

[coverage:run]
branch = True
concurrency = thread,multiprocessing
parallel = True
source = signac
omit = 
	*/signac/common/configobj/*.py

[tool:pytest]
filterwarnings = 
	error::FutureWarning
	error::DeprecationWarning
	ignore::DeprecationWarning:tables
	ignore:Project names are deprecated:FutureWarning
	ignore:Modifying the project configuration:FutureWarning
	ignore:The indexing module is deprecated:DeprecationWarning
	ignore:get_statepoint is deprecated:DeprecationWarning
	ignore:Use of .+ as key is deprecated:DeprecationWarning
	ignore:SimpleKeyring is deprecated:DeprecationWarning
	ignore:The doc_filter argument was deprecated:FutureWarning
	ignore:Calling next\(\) directly on a JobsCursor is deprecated:FutureWarning
	ignore:groupbydoc is deprecated:DeprecationWarning
	ignore:The index argument is deprecated:FutureWarning
	ignore:copytree is deprecated:DeprecationWarning

[bumpversion:file:setup.py]

[bumpversion:file:signac/version.py]

[bumpversion:file:doc/conf.py]

[bumpversion:file:CITATION.cff]

[bumpversion:file:.zenodo.json]

