[bumpversion]
current_version = 1.8.0
commit = True
tag = False
message = Bump up to version {new_version}.

[metadata]
description-file = README.md

[bdist_wheel]
python-tag = py3

[flake8]
max-line-length = 100
exclude = _vendor
select = E,F,W
ignore = E123,E126,E203,E226,E241,E704,W503,W504

[pydocstyle]
match = ^((?!\.sync-zenodo-metadata|setup).)*\.py$
match-dir = ^((?!\.|tests|_vendor).)*$
ignore-decorators = "deprecated"
add-ignore = D105, D107, D203, D204, D213

[coverage:run]
branch = True
concurrency = thread,multiprocessing
parallel = True
source = signac
omit = 
	*/signac/_vendor/*

[tool:pytest]
xfail_strict = True
filterwarnings = error

[bumpversion:file:setup.py]

[bumpversion:file:signac/version.py]

[bumpversion:file:doc/conf.py]

[bumpversion:file:CITATION.cff]

[bumpversion:file:.zenodo.json]
